# flashcards_desktop

./: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
docs/: ARCHITECTURE.md  DECK_FORMAT.md  DEVELOPMENT.md
examples/: architettura-demo.json  example-closed-deck.json  example-mixed-deck.json  example-open-deck.json
src/: App.vue  main.ts  router.ts  style.css
src-tauri/: Cargo.toml  flashcards_desktop.db  piano-codex-flashcards.db  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  services.rs
src/components/app/: AppTitleBar.vue
src/components/flashcard/: ClosedFlashcard.vue  OpenFlashcard.vue
src/components/ui/: BaseButton.vue  ConfirmDialog.vue
src/lib/: api.ts  markdown.ts  shuffle.ts
src/stores/: deckLibrary.ts
src/types/: deck.ts
src/views/: DeckDetailView.vue  LibraryView.vue  StudyView.vue
